--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -223,7 +223,7 @@ defaults:
       author_profile: true
   # _docs
   - scope:
-      path: ""
+      path: "/docs"
       type: docs
     values:
       layout: single
