--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "gatsby": "^4.20.0",
     "gatsby-plugin-feed": "^4.20.0",
+    "gatsby-plugin-graphql-codegen": "^3.1.1",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
@@ -25,7 +26,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "typeface-montserrat": "0.0.75",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
